--- a/package.json
+++ b/package.json
@@ -1,28 +1,14 @@
 {
-    "name": "blueimp-file-upload",
-    "version": "6.7.0",
-    "title": "jQuery File Upload",
-    "description": "File Upload widget with multiple file selection, drag&drop support, progress bars and preview images for jQuery. Supports cross-domain, chunked and resumable file uploads and client-side image resizing. Works with any server-side platform (PHP, Python, Ruby on Rails, Java, Node.js, Go etc.) that supports standard HTML form file uploads.",
+    "name": "blueimp-file-upload-node",
+    "version": "1.0.1",
+    "title": "jQuery File Upload Node.js example",
+    "description": "Node.js implementation example of a file upload handler for jQuery File Upload.",
     "keywords": [
-        "jquery",
         "file",
         "upload",
-        "widget",
-        "multiple",
-        "selection",
-        "drag",
-        "drop",
-        "progress",
-        "preview",
         "cross-domain",
         "cross-site",
-        "chunk",
-        "resume",
-        "gae",
-        "go",
-        "python",
-        "php",
-        "bootstrap"
+        "node"
     ],
     "homepage": "https://github.com/blueimp/jQuery-File-Upload",
     "author": {
@@ -47,10 +33,9 @@
         }
     ],
     "dependencies": {
-        "jquery": ">=1.6",
-        "jquery.ui.widget": ">=1.8",
-        "blueimp-tmpl": ">=2.1.0",
-        "blueimp-load-image": ">=1.1.6",
-        "blueimp-canvas-to-blob": ">=2.0.0"
-    }
+        "formidable": ">=1.0.8",
+        "node-static": ">=0.5.9",
+        "imagemagick": ">=0.1.2"
+    },
+    "main": "server.js"
 }
